Add PyO3 bindings comment in Cargo.toml and store feature set in BatchLoader

--- a/binpack/pybinpack/Cargo.toml
+++ b/binpack/pybinpack/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+# PyO3 bindings for the sfbinpack loader
 [lib]
 name = "binpack_loader"
 crate-type = ["cdylib"]
